Added a few more versions

--- a/_posts/2012-12-27-2018.36.2.md
+++ b/_posts/2012-12-27-2018.36.2.md
@@ -5,4 +5,12 @@ title: '2018.36.2'
 layout: nil
 ---
 
-### Change log
+# Change log
+
+#### Pin to Drive
+
+To increase security. a new setting has been added that allows you to prevent your vehicle from being driven until a 4-digit PIN has been entered. To enable this setting, tap Controls > Safety & Security > PIN to Drive on the touchscreen then create your PIN. Note that the same PIN must be entered in order to drive the vehicle or change the setting. 
+
+# Web
+
+<a href="https://teslamotorsclub.com/tmc/threads/software-update-2018-36-2.129326/">TMC</a><br>
