--- a/_posts/2018-12-29-2018.48.12.1.md
+++ b/_posts/2018-12-29-2018.48.12.1.md
@@ -5,7 +5,7 @@ title: '2018.48.12.1'
 layout: nil
 ---
 
-## Change log
+# Change log
 
 
 #### Mobile App
@@ -33,6 +33,6 @@ Experience the warmth of our virtual fireplace with Romance Mode. To enable Roma
 
 <i>This release contains minor improvements and bug fixes</i>
 
-## Web
+# Web
 
 <a href="https://electrek.co/2018/12/18/tesla-software-update-winter-video-game-mars/">Electrek</a>
